--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="../../../favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="widspan=device-widspan, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -39,22 +39,149 @@
             ></object>
           </div>
           <div class="tools-side-feature-name">SLAB - 01</div>
-          <div class="tools-side-feature-content">Content</div>
+          <div class="tools-side-feature-content">
+            <div class="tools-side-properties-tabs">
+              <div class="tools-side-properties-tab tab-active" id="properties-tab-props">
+                Properties
+              </div>
+              <div class="tools-side-properties-tab" id="properties-tab-material">
+                Material
+              </div>
+              <div class="tools-side-properties-tab" id="properties-tab-psets">
+                Property Sets
+              </div>
+            </div>
+            <div class="tools-side-properties-content-container">
+              <div class="tools-side-properties-header">Slab</div>
+              <div class="tools-side-properties-table-wrapper">
+                <ul class="tools-side-properties-table">
+                  <li>
+                    <span>Property</span>
+                    <span>Value</span>
+                  </li>
+                  <li>
+                    <span>ExpressID</span>
+                    <span>22620</span>
+                  </li>
+                  <li>
+                    <span>Type</span>
+                    <span>1529196076</span>
+                  </li>
+                  <li>
+                    <span>GlobalID</span>
+                    <span>1s5utE$rDDfRKgzV6jUJ0r
+                    </span>
+                  </li>
+                  <li>
+                    <span>Name</span>
+                    <span>Default Ground Floor:1223</span>
+                  </li>
+                  <li>
+                    <span>ObjectType</span>
+                    <span>Default Ground Floor</span>
+                  </li>
+                  <li>
+                    <span>Tag</span>
+                    <span>166811</span>
+                  </li>
+                  <li>
+                    <span>PredefinedType</span>
+                    <span>Floor</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="tools-side-feature">
+        <div class="tools-side-feature feature-active">
+          <div class="tools-side-feature-icon">
+            <object
+              data="./src/assets/icons/building-06.svg"
+              type="image/svg+xml"
+            ></object>
+          </div>
+          <div class="tools-side-feature-header">DINNER MODEL</div>
+          <div class="tools-side-feature-close">
+            <object
+              data="./src/assets/icons/x.svg"
+              type="image/svg+xml"
+            ></object>
+          </div>
+          <div class="tools-side-feature-name">SLAB - 01</div>
+          <div class="tools-side-feature-content">
+            <div class="tools-side-properties-tabs">
+              <div class="tools-side-properties-tab tab-active" id="properties-tab-props">
+                Properties
+              </div>
+              <div class="tools-side-properties-tab" id="properties-tab-material">
+                Material
+              </div>
+              <div class="tools-side-properties-tab" id="properties-tab-psets">
+                Property Sets
+              </div>
+            </div>
+            <div class="tools-side-properties-content-container">
+              <div class="tools-side-properties-header">Slab</div>
+              <div class="tools-side-properties-table-wrapper">
+                <ul class="tools-side-properties-table">
+                  <li>
+                    <span>Property</span>
+                    <span>Value</span>
+                  </li>
+                  <li>
+                    <span>ExpressID</span>
+                    <span>22620</span>
+                  </li>
+                  <li>
+                    <span>Type</span>
+                    <span>1529196076</span>
+                  </li>
+                  <li>
+                    <span>GlobalID</span>
+                    <span>1s5utE$rDDfRKgzV6jUJ0r
+                    </span>
+                  </li>
+                  <li>
+                    <span>Name</span>
+                    <span>Default Ground Floor:1223</span>
+                  </li>
+                  <li>
+                    <span>ObjectType</span>
+                    <span>Default Ground Floor</span>
+                  </li>
+                  <li>
+                    <span>Tag</span>
+                    <span>166811</span>
+                  </li>
+                  <li>
+                    <span>PredefinedType</span>
+                    <span>Floor</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tools-side-feature feature-active">
           <div class="tools-side-feature-icon">
             <object
               data="./src/assets/icons/dataflow-02.svg"
               type="image/svg+xml"
             ></object>
           </div>
-          <div class="tools-side-feature-header"></div>
-          <div class="tools-side-feature-name"></div>
-          <div class="tools-side-feature-content"></div>
+          <div class="tools-side-feature-header">Spatial Tree</div>
+          <div class="tools-side-feature-close">
+            <object
+              data="./src/assets/icons/x.svg"
+              type="image/svg+xml"
+            ></object>
+          </div>
+          <div class="tools-side-feature-name">Dinner Model</div>
+          <div class="tools-side-feature-content">Content</div>
         </div>
       </div>
     </div>
-    <canvas id="three-canvas"></canvas>
+    <canvas id="spanree-canvas"></canvas>
     <script src="bundle.js"></script>
   </body>
 </html>
