UI makeover (wip)

--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
               type="image/svg+xml"
             ></object>
           </div>
-          <div class="tools-side-feature-name">SLAB - 01</div>
+          <div class="tools-side-feature-name">SLAB - 0193721</div>
           <div class="tools-side-feature-content">
             <div class="tools-side-properties-tabs">
-              <div class="tools-side-properties-tab tab-active" id="properties-tab-props">
+              <div
+                class="tools-side-properties-tab tab-active"
+                id="properties-tab-props"
+              >
                 Properties
               </div>
-              <div class="tools-side-properties-tab" id="properties-tab-material">
+              <div
+                class="tools-side-properties-tab"
+                id="properties-tab-material"
+              >
                 Material
               </div>
               <div class="tools-side-properties-tab" id="properties-tab-psets">
@@ -69,8 +75,7 @@
                   </li>
                   <li>
                     <span>GlobalID</span>
-                    <span>1s5utE$rDDfRKgzV6jUJ0r
-                    </span>
+                    <span>1s5utE$rDDfRKgzV6jUJ0r </span>
                   </li>
                   <li>
                     <span>Name</span>
@@ -93,75 +98,7 @@
             </div>
           </div>
         </div>
-        <div class="tools-side-feature feature-active">
-          <div class="tools-side-feature-icon">
-            <object
-              data="./src/assets/icons/building-06.svg"
-              type="image/svg+xml"
-            ></object>
-          </div>
-          <div class="tools-side-feature-header">DINNER MODEL</div>
-          <div class="tools-side-feature-close">
-            <object
-              data="./src/assets/icons/x.svg"
-              type="image/svg+xml"
-            ></object>
-          </div>
-          <div class="tools-side-feature-name">SLAB - 01</div>
-          <div class="tools-side-feature-content">
-            <div class="tools-side-properties-tabs">
-              <div class="tools-side-properties-tab tab-active" id="properties-tab-props">
-                Properties
-              </div>
-              <div class="tools-side-properties-tab" id="properties-tab-material">
-                Material
-              </div>
-              <div class="tools-side-properties-tab" id="properties-tab-psets">
-                Property Sets
-              </div>
-            </div>
-            <div class="tools-side-properties-content-container">
-              <div class="tools-side-properties-header">Slab</div>
-              <div class="tools-side-properties-table-wrapper">
-                <ul class="tools-side-properties-table">
-                  <li>
-                    <span>Property</span>
-                    <span>Value</span>
-                  </li>
-                  <li>
-                    <span>ExpressID</span>
-                    <span>22620</span>
-                  </li>
-                  <li>
-                    <span>Type</span>
-                    <span>1529196076</span>
-                  </li>
-                  <li>
-                    <span>GlobalID</span>
-                    <span>1s5utE$rDDfRKgzV6jUJ0r
-                    </span>
-                  </li>
-                  <li>
-                    <span>Name</span>
-                    <span>Default Ground Floor:1223</span>
-                  </li>
-                  <li>
-                    <span>ObjectType</span>
-                    <span>Default Ground Floor</span>
-                  </li>
-                  <li>
-                    <span>Tag</span>
-                    <span>166811</span>
-                  </li>
-                  <li>
-                    <span>PredefinedType</span>
-                    <span>Floor</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
+
         <div class="tools-side-feature feature-active">
           <div class="tools-side-feature-icon">
             <object
@@ -177,11 +114,12 @@
             ></object>
           </div>
           <div class="tools-side-feature-name">Dinner Model</div>
-          <div class="tools-side-feature-content">Content</div>
+          <div class="tools-side-feature-content" id="spatial-trees-container">
+          </div>
         </div>
       </div>
     </div>
-    <canvas id="spanree-canvas"></canvas>
+    <canvas id="three-canvas"></canvas>
     <script src="bundle.js"></script>
   </body>
 </html>
